# Pyramid

./: .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/core/: config.py  db.py  router.py  service.py  temp_db_models.py
backend/app/courses/: dependencies.py  exceptions.py  models.py  repository.py  schemas.py  service.py
backend/app/points/: models.py
backend/app/steps/: dependencies.py  models.py  repository.py  schemas.py  service.py
backend/app/submissions/: dependencies.py  models.py  repository.py  schemas.py  service.py
backend/app/tasks/: __init__.py  celery_app.py  submission_tasks.py
backend/app/users/: dependencies.py  manager.py  models.py  oauth_config.py  repository.py  schemas.py  service.py
backend/app/utils/: exceptions.py  fake_data.py  logger.py  mixins.py  repository.py  router copy.py  router.py  service.py  transaction_manager.py
backend/migrations/: env.py
backend/migrations/versions/: 001d569a0be1_first_migration.py  3890b103305c_added_is_published_field_to_topic_.py  3e2df8a37ae6_added_oauth_table.py  43142ba622f1_added_userprogress_table.py  5bbfae42b722_first_migration.py  61f696144ccc_added_user_progression_table.py  6758d219d52e_initial_migration.py  7287f01aab95_first_commit.py  7c902399eac3_first_migration.py  8b1aab653223_initial_commit.py  97c68726993b_corrected_submission_model.py  (+1 more)
backend/tests/: Dockerfile  test_base_repository.py  test_endpoints.py
(+49 files in other folders)
